=== master

* Don't try canceling copy in Database#copy_into if copier is not created yet (aakashAu) (#1384)

* Deprecate global conversion procs added by pg_* extensions, when extension isn't loaded into Database instance (jeremyevans)

* Deprecate Sequel::Postgres::PGRange.register in the pg_range extension (jeremyevans)

* Deprecate Sequel::Postgres::PGArray.register in the pg_array extension (jeremyevans)

* Deprecate Database#copy_conversion_procs (private method) on PostgreSQL (jeremyevans)

* Deprecate Database#reset_conversion_procs on PostgreSQL (jeremyevans)

* Deprecate meta_def extension (jeremyevans)

* Make class_table_inheritance plugin with :alias option not use subquery for datasets that don't join (jeremyevans)

* Deprecate hash_aliases extension (jeremyevans)

* Deprecate filter_having extension (jeremyevans)

* Deprecate empty_array_ignore_nulls extension (jeremyevans)

* Deprecate Array#sql_array in the core_extensions extension (jeremyevans)

* Make validation_helpers plugin :allow_blank option work correctly when the blank extension is not loaded (jeremyevans)

* Make validation_class_methods plugin no longer require the blank extension (jeremyevans)

* Clear cached associations when touching associations in the touch plugin (jeremyevans)

* Make pg_array_associations model plugin load pg_array extension into database (jeremyevans)

* Remove support for :strict option in nested_attributes plugin, use :unmatched_pk option instead (jeremyevans)

* Make to_json class/dataset method in json_serializer plugin accept :instance_block option to pass block to Model#to_json (jeremyevans)

* Make to_json methods in json_serializer plugin accept blocks that are used to transform values before serializing to JSON (jeremyevans)

* Make Sequel.object_to_json pass block to #to_json (jeremyevans)

* Deprecate identifier_columns plugin, not needed with Sequel.split_symbols = false (jeremyevans)
