@@ -50,7 +50,7 @@ module Sequel
     # Type OIDs for string types used by PostgreSQL.  These types don't
     # have conversion procs associated with them (since the data is
     # already in the form of a string).
-    STRING_TYPES = [18, 19, 25, 1042, 1043]#.freeze # SEQUEL5
+    STRING_TYPES = [18, 19, 25, 1042, 1043] # SEQUEL5: Remove
 
     # Hash with type name strings/symbols and callable values for converting PostgreSQL types.
     # Non-builtin types that don't have fixed numbers should use this to register
